# vibrato-worker

./: Cargo.toml  LICENSE
src/: main.rs
vibrato/src/: dictionary.rs  lib.rs  mecab.rs
vibrato/src/dictionary/: character.rs  connector.rs  lexicon.rs  mapper.rs  unknown.rs
vibrato/src/dictionary/connector/: dual_connector.rs  matrix_connector.rs  raw_connector.rs
vibrato/src/dictionary/lexicon/: feature.rs  map.rs  param.rs
