[package]
name = "vibrato-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vibrato = "0.5.1"
serde = "1"
serde_json = { version = "1", features = ["std"] }
ruzstd = "0.5.0"
ouroboros = "0.18"
anyhow = { version = "1", features = ["backtrace"] }

log = "0.4"
humantime = "2.1"
fern = "0.6"
